src/FinancialForce Accounting/objects/RelatedContentPaneComponent__c.object
<CustomObject>
    <description>This object is deprecated.</description>
    <fields>
        <fullName>ApexClass__c</fullName>
        <description>Defines the behaviour of the component instance</description>
        <label>Apex Class</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Config__c</fullName>
        <label>Config</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tab__c</fullName>
        <label>Tab</label>
        <referenceTo>RelatedContentPaneTab__c</referenceTo>
        <relationshipName>RelatedContentPaneComponentInstances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Width__c</fullName>
        <label>Width</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>zDeprecated:Related Content Pane Comp</label>
    <nameField>
        <label>Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Related Content Pane Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>